--- a/.github/workflows/build-base-image.yml
+++ b/.github/workflows/build-base-image.yml
@@ -1,10 +1,7 @@
 name: Build and Push Base Docker Image
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-  # Also runs automatically if you change the base Dockerfile on the master branch
   push:
     branches:
       - master
@@ -14,7 +11,6 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    # Grant permissions to write to the GitHub Packages registry
     permissions:
       contents: read
       packages: write
@@ -33,7 +29,8 @@ jobs:
       - name: Build and push base image
         uses: docker/build-push-action@v5
         with:
-          context: ./stryker-agent  # The directory where your Dockerfiles are
-          file: ./stryker-agent/Dockerfile.base # The specific file to build
+          context: ./stryker-agent
+          file: ./stryker-agent/Dockerfile.base
           push: true
           tags: ghcr.io/${{ github.repository }}:base-latest
+          lowercase: true
